@@ -1,4 +1,6 @@
 DIST lxterminal-0.1.4.tar.gz 243568 RMD160 8b21a0bc2363a92b1352ecab7861f20ac1eed43f SHA1 c5e71f9e6ab03f9f158971baaab20ab75f7f37c7 SHA256 3793892331a26d16dc8cb66aae1205df61eb1e4aa1a3a76ea9c1d40ec75c4e7f
+DIST lxterminal-0.1.5.tar.gz 230396 RMD160 fbc785ced752a050d175db369d0e115bd537e94d SHA1 3daf24f01e520f86aadd8605308b5fc373015b6b SHA256 881d219a40f8f0d59f2699895c8cbcafa7ee5d8059d1d247a615f43849e64bab
 EBUILD lxterminal-0.1.4.ebuild 721 RMD160 bc4410989ebae66622c57e8952d607c92d94605b SHA1 13261e3e1a201305adaee92a03d46a343f086d5e SHA256 f5d154bcd93c6c0a5ed6de816034161f79e7fab61aeb198f2fd18a8aba47eea5
-MISC ChangeLog 565 RMD160 fcd830c108e81a4f76678e98735b064352b4bbd2 SHA1 b5195fc9ff30333dc6732b7fef3d14dbfa9bc59f SHA256 79fed086133842423f279749a08f53b5021f198e0710b4b1d0ea45caec04858a
+EBUILD lxterminal-0.1.5.ebuild 696 RMD160 5995462020e30495a0818eabf43313d6dd961e64 SHA1 c35d335031acdb4c377f4db38e7a4a9f31c76176 SHA256 97a648d8bb6b6e61cd257c4f17ef01170b148ecff81c57c2534652433583c23d
+MISC ChangeLog 663 RMD160 e02d985a84e39840b1229366072f403fd029cd95 SHA1 dd06837663934f6eaef6aa4a76e505ed6b5ed09f SHA256 fac8f7eddd0a517ee77b918af2ba6017d3f047b5358900e915cc97e056220484
 MISC metadata.xml 159 RMD160 35036c133a5c9c7edccc3cdfed5789092f884048 SHA1 bdf1b7cc6ffbdd223b6f05aa072e857dfc981c4f SHA256 09574ccad15f69d5367ecbb1a491cd636fb88582f69987d2ec217109dfe8befb
