@@ -1,0 +1,26 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxterminal/lxterminal-0.1.5.ebuild,v 1.1 2009/05/24 23:13:11 yngwin Exp $
+
+EAPI=1
+
+DESCRIPTION="Lightweight vte-based tabbed terminal emulator for LXDE"
+HOMEPAGE="http://lxde.sf.net/"
+SRC_URI="mirror://sourceforge/lxde/${P}.tar.gz"
+
+LICENSE="GPL-2"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux"
+SLOT="0"
+IUSE=""
+
+RDEPEND="x11-libs/gtk+:2
+	dev-libs/glib:2
+	x11-libs/vte"
+DDEPEND="${RDEPEND}
+	dev-util/pkgconfig
+	sys-devel/gettext"
+
+src_install () {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc AUTHORS ChangeLog README
+}
