@@ -1,6 +1,11 @@
 # ChangeLog for lxde-base/lxterminal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/lxde-base/lxterminal/ChangeLog,v 1.2 2009/01/12 23:31:27 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxterminal/ChangeLog,v 1.3 2009/05/24 23:13:10 yngwin Exp $
+
+*lxterminal-0.1.5 (24 May 2009)
+
+  24 May 2009; Ben de Groot <yngwin@gentoo.org> +lxterminal-0.1.5.ebuild:
+  Version bump
 
 *lxterminal-0.1.4 (12 Jan 2009)
 
